my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: master
    http:
      paths:
      - path: /myapp
        pathType: Exact
        backend:
          service:
            name: nginx-svc
            port:
              number: 8080
